--- a/core.declarations/package.json
+++ b/core.declarations/package.json
@@ -5,7 +5,7 @@
         "core",
         "declarations"
     ],
-    "version": "0.0.1601097474",
+    "version": "0.0.1601154294",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "license": "ISC",
     "types": "lib/index.d.ts",
@@ -18,7 +18,8 @@
         "purge": "gulp purge",
         "update": "gulp stickToMajorSemver && npm update --dev --force -verbose",
         "bumpVersion": "timestamp=$(date \"+%s\") && npm version 0.0.$timestamp",
-        "prepublishOnly": "npm run lint && npm run bumpVersion && gulp stickToMajorSemver"
+        "prepublishOnly": "npm run lint && npm run bumpVersion && gulp stickToMajorSemver",
+        "unpublish": "npm unpublish --force $npm_package_name"
     },
     "lint-staged": {
         "*.ts": [
