--- a/lib.collection/package.json
+++ b/lib.collection/package.json
@@ -7,7 +7,7 @@
         "mongoose",
         "collection"
     ],
-    "version": "0.0.1",
+    "version": "0.0.1601759646",
     "author": "Rusu Marin dimarusu2000@gmail.com",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
