--- a/lib.exception/.gitignore
+++ b/lib.exception/.gitignore
@@ -6,11 +6,13 @@
 /dist-server
 /tmp
 /out-tsc
-/build/Release
+/doc
+/docs
 
 # testing
 /.nyc_output
 /coverage
+/report
 
 # environment
 .env
@@ -31,16 +33,8 @@ package-lock.json
 # IDE - VSCode
 .vscode/*
 !.vscode/settings.json
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
 
 # IDE - VSCode
-.vscode/*
-!.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
