--- a/lib.exception/package.json
+++ b/lib.exception/package.json
@@ -1,21 +1,27 @@
 {
     "name": "@thermopylae/lib.exception",
-    "description": "Generic Exception",
+    "description": "General purpose exception.",
     "keywords": [
+        "thermopylae",
+        "library",
         "exception"
     ],
-    "version": "0.0.1592763185",
+    "version": "0.0.1601789191",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "license": "ISC",
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
+    "exports": "./dist/index.js",
     "files": [
         "dist/**/*"
     ],
+    "type": "commonjs",
     "scripts": {
         "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
         "build": "gulp build",
+        "doc": "gulp doc",
         "test": "gulp test",
+        "report": "gulp report",
         "coverage": "gulp coverage",
         "coverage:show": "gulp coverageShow",
         "debug": "gulp debug",
@@ -23,7 +29,7 @@
         "purge": "gulp purge",
         "update": "gulp stickToMajorSemver && npm update --dev --force -verbose",
         "bumpVersion": "timestamp=$(date \"+%s\") && npm version 0.0.$timestamp",
-        "prepublishOnly": "npm run lint && npm run clean && npm run build && npm run bumpVersion && gulp stickToMajorSemver"
+        "prepublishOnly": "npm run lint && npm run clean && npm run build && npm run bumpVersion && gulp stickToMajorSemver && gulp readme"
     },
     "lint-staged": {
         "*.ts": [
@@ -31,7 +37,7 @@
         ]
     },
     "engines": {
-        "node": "12.8.0"
+        "node": ">= 14"
     },
     "devDependencies": {
         "@thermopylae/module-builder": "0"
