--- a/lib.logger/.gitignore
+++ b/lib.logger/.gitignore
@@ -1,4 +1,3 @@
-
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
@@ -12,6 +11,11 @@
 # testing
 /.nyc_output
 /coverage
+/report
+/doc
+
+# environment
+.env
 
 # dependencies
 /node_modules
@@ -19,6 +23,16 @@ package-lock.json
 
 # IDEs and editors
 /.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
 .project
 .classpath
 .c9/
@@ -63,5 +77,3 @@ Thumbs.db
 *.swp
 .Spotlight*
 .Trashes
-
-	
