Documentation lib.cache

--- a/lib.async-cache/.gitignore
+++ b/lib.async-cache/.gitignore
@@ -6,11 +6,13 @@
 /dist-server
 /tmp
 /out-tsc
-/doc
+/build/Release
 
 # testing
 /.nyc_output
 /coverage
+/report
+/doc
 
 # environment
 .env
@@ -21,6 +23,16 @@ package-lock.json
 
 # IDEs and editors
 /.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
 .project
 .classpath
 .c9/
