--- a/lib.cache/package.json
+++ b/lib.cache/package.json
@@ -43,9 +43,11 @@
         "@thermopylae/module-builder": "0",
         "@types/array-move": "2",
         "@types/dotenv": "8",
+        "@types/lodash.range": "3",
         "array-move": "3",
         "dotenv": "8",
-        "js-gc": "1"
+        "js-gc": "1",
+        "lodash.range": "3"
     },
     "peerDependencies": {
         "mocha": "8",
