--- a/lib.cache/package.json
+++ b/lib.cache/package.json
@@ -10,7 +10,7 @@
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
-    "types": "dist/index.d.ts",
+    "types": "./dist/index.d.ts",
     "files": [
         "dist/**/*"
     ],
@@ -59,7 +59,7 @@
         ]
     },
     "engines": {
-        "node": ">=14"
+        "node": ">= 14"
     },
     "license": "ISC",
     "type": "commonjs"
