Get up-to-date some packages

--- a/packages/lib.async/tsconfig.json
+++ b/packages/lib.async/tsconfig.json
@@ -4,7 +4,7 @@
         "target": "esnext",
         "module": "commonjs",
         "allowJs": true,
-        "checkJs": true,
+        "checkJs": false,
         "declaration": true,
         "rootDir": ".",
         "outDir": "dist",
