--- a/packages/lib.async/package.json
+++ b/packages/lib.async/package.json
@@ -52,5 +52,7 @@
     "engines": {
         "node": ">= 14"
     },
-    "license": "ISC"
+    "license": "ISC",
+    "exports": "./dist/index.js",
+    "type": "commonjs"
 }
