--- a/packages/lib.heap/tsconfig.json
+++ b/packages/lib.heap/tsconfig.json
@@ -8,7 +8,7 @@
             "ESNext"
         ],
         "allowJs": true,
-        "checkJs": true,
+        "checkJs": false,
         "declaration": true,
         "rootDir": ".",
         "outDir": "dist",
