--- a/packages/lib.utils/package.json
+++ b/packages/lib.utils/package.json
@@ -39,25 +39,22 @@
         "node": ">=14"
     },
     "dependencies": {
+        "@otplib/core": "12",
+        "@otplib/plugin-crypto": "12",
+        "@otplib/plugin-thirty-two": "12",
         "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.exception": "0",
         "convert-hrtime": "3",
         "fast-copy": "2",
         "lodash.clone": "4",
-        "otplib": "11",
-        "uuid": "7"
+        "uuid": "8"
     },
     "devDependencies": {
         "@thermopylae/lib.unit-test": "0",
         "@thermopylae/module-builder": "0",
         "@types/convert-hrtime": "3",
         "@types/lodash.clone": "4",
-        "@types/otplib": "10",
-        "@types/uuid": "7"
-    },
-    "peerDependencies": {
-        "mocha": "8",
-        "chai": "4"
+        "@types/uuid": "8"
     },
     "type": "commonjs"
 }
