--- a/packages/module-builder/package.json
+++ b/packages/module-builder/package.json
@@ -23,7 +23,7 @@
     "del": "6",
     "eslint": "7",
     "eslint-config-airbnb-base": "14",
-    "eslint-config-prettier": "6",
+    "eslint-config-prettier": "7",
     "eslint-plugin-import": "2",
     "eslint-plugin-mocha": "8",
     "eslint-plugin-node": "11",
@@ -32,6 +32,7 @@
     "esm": "3",
     "gulp": "4",
     "gulp-replace": "1",
+    "http-server": "0",
     "mocha": "8",
     "mochawesome": "6",
     "npm-run": "5",
@@ -40,6 +41,6 @@
     "ts-node": "9",
     "typedoc": "0",
     "typedoc-neo-theme": "1",
-    "typescript": "4"
+    "typescript": "4.0"
   }
 }
