Unit tests for LFU Cache

--- a/packages/lib.cache/package.json
+++ b/packages/lib.cache/package.json
@@ -45,13 +45,14 @@
         "@types/dotenv": "8",
         "@types/lodash.range": "3",
         "array-move": "3",
+        "colors": "1",
         "dotenv": "8",
         "js-gc": "1",
         "lodash.range": "3"
     },
     "peerDependencies": {
-        "mocha": "8",
-        "chai": "4"
+        "chai": "4",
+        "mocha": "8"
     },
     "lint-staged": {
         "*.ts": [
