--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "@thermopylae/monorepo",
+  "version": "0.0.0",
   "private": true,
   "workspaces": [
     "packages/core.declarations",
