--- a/packages/lib.cache/package.json
+++ b/packages/lib.cache/package.json
@@ -2,11 +2,10 @@
     "name": "@thermopylae/lib.cache",
     "description": "Modular synchronous cache.",
     "keywords": [
-        "thermopylae",
         "library",
-        "cache"
+        "typescript"
     ],
-    "version": "0.0.1587317824",
+    "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
