--- a/packages/module-builder/package.json
+++ b/packages/module-builder/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@thermopylae/module-builder",
-  "version": "0.0.1606050304",
+  "version": "0.0.1",
   "description": "Builder and common stuff for typescript modules",
   "main": "lib/index.js",
   "files": [
