--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "packages/core.declarations",
     "packages/core.jwt",
     "packages/lib.async",
-    "packages/lib.async-cache",
     "packages/lib.cache",
     "packages/lib.collection",
     "packages/lib.decorators",
@@ -15,6 +14,7 @@
     "packages/lib.indexed-store",
     "packages/lib.logger",
     "packages/lib.pool",
+    "packages/lib.sms",
     "packages/lib.unit-test",
     "packages/lib.utils",
     "packages/module-builder"
