--- a/packages/lib.sms/.gitignore
+++ b/packages/lib.sms/.gitignore
@@ -1,4 +1,3 @@
-
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
@@ -7,11 +6,12 @@
 /dist-server
 /tmp
 /out-tsc
-/build/Release
+/doc
 
 # testing
 /.nyc_output
 /coverage
+/report
 
 # environment
 .env
@@ -66,4 +66,3 @@ Thumbs.db
 *.swp
 .Spotlight*
 .Trashes
-
