--- a/packages/lib.sms/package.json
+++ b/packages/lib.sms/package.json
@@ -1,15 +1,13 @@
 {
-    "name": "@marin/lib.sms",
+    "name": "@thermopylae/lib.sms",
     "description": "Sms client library",
     "keywords": [
-        "sms",
-        "lib",
-        "ts"
+        "library"
     ],
-    "version": "0.0.1-beta",
+    "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "license": "ISC",
     "main": "dist/index.js",
+    "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
     "files": [
         "dist/**/*"
@@ -17,11 +15,33 @@
     "scripts": {
         "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
         "build": "gulp build",
+        "doc": "gulp doc",
+        "readme": "gulp readme",
         "test": "gulp test",
+        "report": "gulp report",
         "coverage": "gulp coverage",
         "coverage:show": "gulp coverageShow",
+        "debug": "gulp debug",
         "clean": "gulp clean",
-        "purge": "gulp purge"
+        "purge": "gulp purge",
+        "update": "gulp stickToMajorSemver && npm update --dev --force -verbose",
+        "bumpVersion": "timestamp=$(date \"+%s\") && npm version 0.0.$timestamp",
+        "precommit": "npm run lint",
+        "prepublishOnly": "npm run lint && npm run clean && npm run build && npm run bumpVersion && gulp stickToMajorSemver && gulp readme",
+        "unpublish": "npm unpublish --force $npm_package_name"
+    },
+    "dependencies": {
+        "@thermopylae/lib.exception": "0",
+        "twilio": "3"
+    },
+    "devDependencies": {
+        "@thermopylae/core.declarations": "0",
+        "@thermopylae/lib.unit-test": "0",
+        "@thermopylae/module-builder": "0"
+    },
+    "peerDependencies": {
+        "chai": "4",
+        "mocha": "8"
     },
     "lint-staged": {
         "*.ts": [
@@ -29,36 +49,8 @@
         ]
     },
     "engines": {
-        "node": "12.8.0"
+        "node": ">= 14"
     },
-    "dependencies": {
-        "@marin/lib.error": "file:../lib.error",
-        "twilio": "^3.39.3"
-    },
-    "devDependencies": {
-        "@marin/lib.module-builder": "file:../lib.module-builder",
-        "@marin/lib.utils": "file:../lib.utils",
-        "@types/chai": "^4.2.7",
-        "@types/chai-arrays": "^1.0.3",
-        "@types/chai-as-promised": "^7.1.2",
-        "@types/mocha": "^5.2.7",
-        "@types/node": "^13.5.0",
-        "@typescript-eslint/eslint-plugin": "^2.17.0",
-        "@typescript-eslint/parser": "^2.17.0",
-        "chai": "^4.2.0",
-        "chai-arrays": "^2.0.0",
-        "chai-as-promised": "^7.1.1",
-        "dotenv": "^8.2.0",
-        "eslint": "^6.8.0",
-        "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-config-prettier": "^6.9.0",
-        "eslint-plugin-import": "^2.20.0",
-        "eslint-plugin-prettier": "^3.1.2",
-        "esm": "^3.2.25",
-        "mocha": "^7.0.0",
-        "nyc": "^15.0.0",
-        "prettier": "^1.19.1",
-        "ts-node": "^8.6.2",
-        "typescript": "^3.7.5"
-    }
+    "license": "ISC",
+    "type": "commonjs"
 }
