--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "workspaces": [
     "packages/core.declarations",
-    "packages/core.jwt",
+    "packages/lib.jwt-session",
     "packages/lib.async",
     "packages/lib.cache",
     "packages/lib.collection",
+    "packages/lib.user-session",
     "packages/lib.decorators",
     "packages/lib.exception",
     "packages/lib.heap",
