--- a/packages/lib.cache/package.json
+++ b/packages/lib.cache/package.json
@@ -6,14 +6,8 @@
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "main": "dist/index.js",
-    "exports": {
-        ".": "./dist/index.js",
-        "./backend/*": "./dist/backend/*.js",
-        "./caches/*": "./dist/caches/*.js",
-        "./garbage-collectors/*": "./dist/garbage-collectors/*.js",
-        "./policies/*": "./dist/policies/**/*.js"
-    },
+    "main": "./dist/index.js",
+    "exports": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "files": [
         "dist/**/*"
