--- a/packages/lib.jwt-session/package.json
+++ b/packages/lib.jwt-session/package.json
@@ -37,6 +37,8 @@
     },
     "devDependencies": {
         "@thermopylae/core.declarations": "0",
+        "@thermopylae/lib.unit-test": "0",
+        "@thermopylae/lib.cache": "0",
         "@thermopylae/module-builder": "0",
         "@types/jsonwebtoken": "8"
     },
