--- a/packages/lib.email/.gitignore
+++ b/packages/lib.email/.gitignore
@@ -1,4 +1,3 @@
-
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
@@ -7,11 +6,15 @@
 /dist-server
 /tmp
 /out-tsc
-/build/Release
+/doc
 
 # testing
 /.nyc_output
 /coverage
+/report
+
+# environment
+.env
 
 # dependencies
 /node_modules
@@ -63,7 +66,3 @@ Thumbs.db
 *.swp
 .Spotlight*
 .Trashes
-
-# Environment
-.env
-
