--- a/packages/lib.email/package.json
+++ b/packages/lib.email/package.json
@@ -1,63 +1,58 @@
 {
-  "name": "@marin/lib.email",
-  "description": "Email lib",
-  "keywords": [
-    "email",
-    "ts",
-    "node"
-  ],
-  "version": "1.0.0",
-  "author": "Rusu Marin <dimarusu2000@gmail.com>",
-  "license": "ISC",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist/**/*"
-  ],
-  "scripts": {
-    "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
-    "build": "gulp build",
-    "test": "gulp test",
-    "coverage": "gulp coverage",
-    "coverage:show": "gulp coverageShow",
-    "clean": "gulp clean",
-    "purge": "gulp purge"
-  },
-  "lint-staged": {
-    "*.ts": [
-      "eslint"
-    ]
-  },
-  "engines": {
-    "node": "13.2.0"
-  },
-  "dependencies": {
-    "@marin/lib.error": "file:../lib.error",
-    "@marin/lib.logger": "file:../lib.logger",
-    "nodemailer": "6"
-  },
-  "devDependencies": {
-    "@types/chai": "4",
-    "@types/mocha": "5",
-    "@types/node": "12",
-    "@types/nodemailer": "6",
-    "@typescript-eslint/eslint-plugin": "2",
-    "@typescript-eslint/parser": "2",
-    "@marin/lib.utils": "file:../lib.utils",
-    "@marin/lib.module-builder": "file:../lib.module-builder",
-    "chai": "4",
-    "dotenv": "8",
-    "eslint": "6",
-    "eslint-config-airbnb-base": "14",
-    "eslint-config-prettier": "6",
-    "eslint-plugin-import": "2",
-    "eslint-plugin-prettier": "3",
-    "esm": "3",
-    "googleapis": "45",
-    "mocha": "6",
-    "nyc": "14",
-    "prettier": "1",
-    "ts-node": "8",
-    "typescript": "3"
-  }
+    "name": "@thermopylae/lib.email",
+    "description": "Email client.",
+    "keywords": [
+        "library"
+    ],
+    "version": "0.0.1",
+    "author": "Rusu Marin <dimarusu2000@gmail.com>",
+    "main": "./dist/index.js",
+    "exports": "./dist/index.js",
+    "types": "./dist/index.d.ts",
+    "files": [
+        "dist/**/*"
+    ],
+    "scripts": {
+        "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
+        "build": "gulp build",
+        "doc": "gulp doc",
+        "readme": "gulp readme",
+        "test": "gulp test",
+        "report": "gulp report",
+        "coverage": "gulp coverage",
+        "coverage:show": "gulp coverageShow",
+        "debug": "gulp debug",
+        "clean": "gulp clean",
+        "purge": "gulp purge",
+        "update": "gulp stickToMajorSemver && npm update --dev --force -verbose",
+        "bumpVersion": "timestamp=$(date \"+%s\") && npm version 0.0.$timestamp",
+        "precommit": "npm run lint",
+        "prepublishOnly": "npm run lint && npm run clean && npm run build && npm run bumpVersion && gulp stickToMajorSemver && gulp readme",
+        "unpublish": "npm unpublish --force $npm_package_name"
+    },
+    "dependencies": {
+        "@thermopylae/lib.logger": "0",
+        "nodemailer": "6"
+    },
+    "devDependencies": {
+        "@thermopylae/core.declarations": "0",
+        "@thermopylae/lib.unit-test": "0",
+        "@thermopylae/module-builder": "0",
+        "@types/nodemailer": "6",
+        "dotenv": "8"
+    },
+    "peerDependencies": {
+        "chai": "4",
+        "mocha": "8"
+    },
+    "lint-staged": {
+        "*.ts": [
+            "eslint"
+        ]
+    },
+    "engines": {
+        "node": ">= 14"
+    },
+    "license": "ISC",
+    "type": "commonjs"
 }
