Fixed error codes in some modules

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "packages/lib.async",
     "packages/lib.cache",
     "packages/lib.collection",
+    "packages/lib.cookie-session",
     "packages/lib.decorators",
     "packages/lib.email",
     "packages/lib.exception",
@@ -17,7 +18,6 @@
     "packages/lib.pool",
     "packages/lib.sms",
     "packages/lib.unit-test",
-    "packages/lib.user-session",
     "packages/lib.utils",
     "packages/module-builder"
   ]
