Update dependencies from the module-builder

--- a/packages/lib.cache/tsconfig.json
+++ b/packages/lib.cache/tsconfig.json
@@ -3,7 +3,7 @@
         "incremental": true,
         "target": "esnext",
         "module": "commonjs",
-        "allowJs": true,
+        "allowJs": false,
         "declaration": true,
         "outDir": "dist",
         "composite": true,
