--- a/packages/lib.jwt-session/package.json
+++ b/packages/lib.jwt-session/package.json
@@ -32,16 +32,19 @@
     },
     "dependencies": {
         "@thermopylae/lib.exception": "0",
-        "@thermopylae/lib.utils": "0",
+        "@thermopylae/lib.logger": "0",
         "fast-deep-equal": "3",
-        "jsonwebtoken": "8"
+        "jsonwebtoken": "8",
+        "uid-safe": "2"
     },
     "devDependencies": {
         "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.cache": "0",
         "@thermopylae/lib.unit-test": "0",
+        "@thermopylae/lib.utils": "0",
         "@thermopylae/module-builder": "0",
         "@types/jsonwebtoken": "8",
+        "@types/uid-safe": "2",
         "utility-types": "3"
     },
     "peerDependencies": {
@@ -54,7 +57,7 @@
         ]
     },
     "engines": {
-        "node": ">= 14"
+        "node": ">= 16"
     },
     "license": "ISC",
     "type": "commonjs"
