--- a/packages/core.redis/package.json
+++ b/packages/core.redis/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "@thermopylae/lib.data-access",
-    "description": "Clients used for accessing external data storages.",
+    "name": "@thermopylae/core.redis",
+    "description": "Redis client.",
     "keywords": [
         "library"
     ],
     "version": "0.0.1",
-    "author": "Rusu Marin <dimarusu2000@gmail.com>",
+    "author": "Rusu Marin dimarusu2000@gmail.com",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
@@ -31,14 +31,15 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/lib.exception": "0",
         "@thermopylae/lib.logger": "0",
-        "mysql": "2"
+        "@thermopylae/lib.utils": "0",
+        "handy-redis": "2",
+        "redis": "3"
     },
     "devDependencies": {
         "@thermopylae/core.declarations": "0",
         "@thermopylae/module-builder": "0",
-        "@types/mysql": "2"
+        "@types/redis": "2"
     },
     "peerDependencies": {
         "chai": "4",
