--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "packages/core.mysql",
     "packages/core.redis",
     "packages/lib.async",
+    "packages/lib.authentication",
     "packages/lib.cache",
     "packages/lib.collection",
     "packages/lib.cookie-session",
