--- a/packages/lib.geoip/.gitignore
+++ b/packages/lib.geoip/.gitignore
@@ -1,4 +1,3 @@
-
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
@@ -12,17 +11,28 @@
 # testing
 /.nyc_output
 /coverage
+/report
+/doc
+
+# environment
+.env
 
 # dependencies
 /node_modules
 package-lock.json
 
-# config
-GeoIP.conf
-.env
-
 # IDEs and editors
 /.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
 .project
 .classpath
 .c9/
@@ -67,4 +77,3 @@ Thumbs.db
 *.swp
 .Spotlight*
 .Trashes
-
