--- a/packages/lib.geoip/package.json
+++ b/packages/lib.geoip/package.json
@@ -1,15 +1,13 @@
 {
-    "name": "@marin/lib.geoip",
-    "description": "Geo location based on ip address",
+    "name": "@thermopylae/lib.geoip",
+    "description": "Geo location based on ip address.",
     "keywords": [
-        "geo location",
-        "ip",
-        "lib"
+        "library"
     ],
-    "version": "1.0.0",
+    "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "license": "ISC",
     "main": "dist/index.js",
+    "exports": "./dist/index.js",
     "types": "dist/index.d.ts",
     "files": [
         "dist/**/*"
@@ -17,13 +15,37 @@
     "scripts": {
         "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
         "build": "gulp build",
+        "doc": "gulp doc",
+        "readme": "gulp readme",
         "test": "gulp test",
-        "debug": "npx mocha -r esm --inspect-brk",
+        "report": "gulp report",
         "coverage": "gulp coverage",
         "coverage:show": "gulp coverageShow",
+        "debug": "gulp debug",
         "clean": "gulp clean",
         "purge": "gulp purge",
-        "postinstall": "node scripts/postinstall.js"
+        "update": "gulp stickToMajorSemver && npm update --dev --force -verbose",
+        "bumpVersion": "timestamp=$(date \"+%s\") && npm version 0.0.$timestamp",
+        "precommit": "npm run lint",
+        "prepublishOnly": "npm run lint && npm run clean && npm run build && npm run bumpVersion && gulp stickToMajorSemver && gulp readme",
+        "unpublish": "npm unpublish --force $npm_package_name"
+    },
+    "dependencies": {
+        "@thermopylae/lib.logger": "0",
+        "@thermopylae/lib.utils": "0",
+        "geoip-lite": "1",
+        "node-fetch": "2"
+    },
+    "devDependencies": {
+        "@thermopylae/core.declarations": "0",
+        "@thermopylae/module-builder": "0",
+        "@thermopylae/lib.unit-test": "0",
+        "@types/geoip-lite": "1",
+        "dotenv": "8"
+    },
+    "peerDependencies": {
+        "chai": "4",
+        "mocha": "8"
     },
     "lint-staged": {
         "*.ts": [
@@ -31,34 +53,8 @@
         ]
     },
     "engines": {
-        "node": "12.8.0"
+        "node": ">= 16"
     },
-    "dependencies": {
-        "@marin/lib.logger": "file:../lib.logger",
-        "@marin/lib.utils": "file:../lib.utils",
-        "@marin/lib.error": "file:../lib.error",
-        "geoip-lite": "^1.4.0"
-    },
-    "devDependencies": {
-        "@marin/lib.module-builder": "file:../lib.module-builder",
-        "@types/chai": "^4.2.7",
-        "@types/geoip-lite": "^1.1.29",
-        "@types/mocha": "^5.2.7",
-        "@types/node": "^13.1.8",
-        "@typescript-eslint/eslint-plugin": "^2.16.0",
-        "@typescript-eslint/parser": "^2.16.0",
-        "chai": "^4.2.0",
-        "dotenv": "^8.2.0",
-        "eslint": "^6.8.0",
-        "eslint-config-airbnb-base": "^14.0.0",
-        "eslint-config-prettier": "^6.9.0",
-        "eslint-plugin-import": "^2.20.0",
-        "eslint-plugin-prettier": "^3.1.2",
-        "esm": "^3.2.25",
-        "mocha": "^7.0.0",
-        "nyc": "^15.0.0",
-        "prettier": "^1.19.1",
-        "ts-node": "^8.6.2",
-        "typescript": "^3.7.5"
-    }
+    "license": "ISC",
+    "type": "commonjs"
 }
