core.jwt-session http implementation

--- a/packages/core.jwt-session/package.json
+++ b/packages/core.jwt-session/package.json
@@ -31,11 +31,15 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
-        "@thermopylae/lib.jwt-session": "0"
+        "@thermopylae/lib.exception": "0",
+        "@thermopylae/lib.jwt-session": "0",
+        "@thermopylae/core.redis": "0",
+        "cookie": "0"
     },
     "devDependencies": {
         "@thermopylae/core.declarations": "0",
-        "@thermopylae/module-builder": "0"
+        "@thermopylae/module-builder": "0",
+        "ts-essentials": "7"
     },
     "peerDependencies": {
         "chai": "4",
