--- a/packages/lib.utils/tsconfig.json
+++ b/packages/lib.utils/tsconfig.json
@@ -3,7 +3,12 @@
         "incremental": true,
         "target": "esnext",
         "module": "commonjs",
-        "allowJs": true,
+        "moduleResolution": "node",
+        "lib": [
+            "ESNext"
+        ],
+        "allowJs": false,
+        "checkJs": false,
         "declaration": true,
         "rootDir": ".",
         "outDir": "dist",
@@ -22,9 +27,9 @@
         "noUnusedParameters": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
-        "moduleResolution": "node",
         "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "experimentalDecorators": true
     },
     "include": [
         "lib/**/*.ts",
