--- a/packages/lib.collection/package.json
+++ b/packages/lib.collection/package.json
@@ -2,10 +2,7 @@
     "name": "@thermopylae/lib.collection",
     "description": "MongoDB like collection.",
     "keywords": [
-        "thermopylae",
-        "library",
-        "mongoose",
-        "collection"
+        "library"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin dimarusu2000@gmail.com",
@@ -37,8 +34,8 @@
         "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.exception": "0",
         "@thermopylae/lib.indexed-store": "0",
-        "ajv": "6",
-        "ajv-i18n": "3",
+        "ajv": "8",
+        "ajv-i18n": "4",
         "common-query": "3",
         "dot-prop": "6",
         "isobject": "4",
@@ -68,7 +65,7 @@
         ]
     },
     "engines": {
-        "node": ">= 14"
+        "node": ">= 16"
     },
     "license": "ISC",
     "type": "commonjs"
