--- a/packages/lib.utils/package.json
+++ b/packages/lib.utils/package.json
@@ -2,14 +2,10 @@
     "name": "@thermopylae/lib.utils",
     "description": "Utility functions.",
     "keywords": [
-        "thermopylae",
-        "library",
-        "typescript"
+        "library"
     ],
     "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "repository": "https://bitbucket.org/marinrusu1997/framework/src/master/lib.utils/",
-    "license": "ISC",
     "main": "dist/index.js",
     "exports": "./dist/index.js",
     "typings": "dist/index.d.ts",
@@ -31,31 +27,36 @@
         "bumpVersion": "timestamp=$(date \"+%s\") && npm version 0.0.$timestamp",
         "prepublishOnly": "npm run lint && npm run clean && npm run build && npm run bumpVersion && gulp stickToMajorSemver"
     },
-    "lint-staged": {
-        "*.ts": [
-            "eslint"
-        ]
-    },
-    "engines": {
-        "node": ">=14"
-    },
     "dependencies": {
+        "@thermopylae/lib.exception": "0",
         "@otplib/core": "12",
         "@otplib/plugin-crypto": "12",
         "@otplib/plugin-thirty-two": "12",
-        "@thermopylae/core.declarations": "0",
-        "@thermopylae/lib.exception": "0",
         "convert-hrtime": "3",
         "fast-copy": "2",
         "lodash.clone": "4",
         "uuid": "8"
     },
     "devDependencies": {
+        "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.unit-test": "0",
         "@thermopylae/module-builder": "0",
         "@types/convert-hrtime": "3",
         "@types/lodash.clone": "4",
         "@types/uuid": "8"
     },
+    "peerDependencies": {
+        "chai": "4",
+        "mocha": "8"
+    },
+    "lint-staged": {
+        "*.ts": [
+            "eslint"
+        ]
+    },
+    "engines": {
+        "node": ">= 16"
+    },
+    "license": "ISC",
     "type": "commonjs"
 }
