--- a/packages/core.declarations/package.json
+++ b/packages/core.declarations/package.json
@@ -1,25 +1,37 @@
 {
     "name": "@thermopylae/core.declarations",
-    "description": "Declarations used by Thermopylae framework",
+    "description": "Declarations used by Thermopylae framework.",
     "keywords": [
-        "core",
-        "declarations"
+        "core"
     ],
-    "version": "0.0.1604215692",
+    "version": "0.0.1",
     "author": "Rusu Marin <dimarusu2000@gmail.com>",
-    "license": "ISC",
-    "types": "lib/index.d.ts",
+    "main": "dist/index.js",
+    "exports": "./dist/index.js",
+    "types": "dist/index.d.ts",
     "files": [
-        "lib/**/*"
+        "dist/**/*"
     ],
     "scripts": {
-        "lint": "eslint \"lib/**/*.d.ts\" --fix",
+        "lint": "eslint \"lib/**/*.ts\" \"test/**/*.ts\" --fix",
+        "build": "gulp build",
+        "doc": "gulp doc",
+        "readme": "gulp readme",
+        "test": "gulp test",
+        "report": "gulp report",
+        "coverage": "gulp coverage",
+        "coverage:show": "gulp coverageShow",
+        "debug": "gulp debug",
         "clean": "gulp clean",
         "purge": "gulp purge",
         "update": "gulp stickToMajorSemver && npm update --dev --force -verbose",
         "bumpVersion": "timestamp=$(date \"+%s\") && npm version 0.0.$timestamp",
-        "prepublishOnly": "npm run lint && npm run bumpVersion && gulp stickToMajorSemver",
+        "precommit": "npm run lint",
+        "prepublishOnly": "npm run lint && npm run clean && npm run build && npm run bumpVersion && gulp stickToMajorSemver && gulp readme",
         "unpublish": "npm unpublish --force $npm_package_name"
+    },
+    "devDependencies": {
+        "@thermopylae/module-builder": "0"
     },
     "lint-staged": {
         "*.ts": [
@@ -27,9 +39,8 @@
         ]
     },
     "engines": {
-        "node": ">= 14"
+        "node": ">= 16"
     },
-    "devDependencies": {
-        "@thermopylae/module-builder": "0"
-    }
+    "license": "ISC",
+    "type": "commonjs"
 }
