--- a/packages/core.redis/package.json
+++ b/packages/core.redis/package.json
@@ -31,13 +31,14 @@
         "unpublish": "npm unpublish --force $npm_package_name"
     },
     "dependencies": {
+        "@thermopylae/core.declarations": "0",
         "@thermopylae/lib.logger": "0",
+        "@thermopylae/lib.exception": "0",
         "@thermopylae/lib.utils": "0",
         "handy-redis": "2",
         "redis": "3"
     },
     "devDependencies": {
-        "@thermopylae/core.declarations": "0",
         "@thermopylae/module-builder": "0",
         "@types/redis": "2"
     },
